// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Create 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create Competitor"
  />
   
  <div>
    <h1
      class="text-main text-3xl font-normal font-heading mb-2"
    >
      
      Create Competitor
    
    </h1>
     
    <!---->
     
    <form>
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Name:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Club:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Age Class:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="dropdown-input relative top--4"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3"
        >
          League:
        </label>
         
        <div
          class="visible w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 outline-none"
        >
          <p
            class="leading-normal h-6 truncate"
          >
            
          </p>
           
          <svg
            class="h-8 text-main float-right fill-current mr--3 mt--68/10"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
             
            <path
              d="M0-.75h24v24H0z"
              fill="none"
            />
          </svg>
        </div>
         
        <div
          class="dropdown absolute text-body z-40 bg-white text-center w-full border border-main select-none border-t-0 mb-2"
          name="open"
          style="display: none;"
        />
      </div>
       
      <div
        class="dropdown-input relative top--4"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3"
        >
          Course:
        </label>
         
        <div
          class="visible w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 outline-none"
        >
          <p
            class="leading-normal h-6 truncate"
          >
            
          </p>
           
          <svg
            class="h-8 text-main float-right fill-current mr--3 mt--68/10"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
             
            <path
              d="M0-.75h24v24H0z"
              fill="none"
            />
          </svg>
        </div>
         
        <div
          class="dropdown absolute text-body z-40 bg-white text-center w-full border border-main select-none border-t-0 mb-2"
          name="open"
          style="display: none;"
        />
      </div>
       
      <button
        class="button-lg"
      >
        Create Competitor
      </button>
       
      <!---->
    </form>
  </div>
   
  <!---->
</div>
`;

exports[`Renders Correctly - Upload 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit Competitor"
  />
   
  <div>
    <!---->
     
    <h1
      class="text-main text-3xl font-normal font-heading mb-2"
    >
      
      Edit Competitor
    
    </h1>
     
    <form>
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Name:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Club:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Age Class:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="dropdown-input relative top--4"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3"
        >
          League:
        </label>
         
        <div
          class="visible w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 outline-none"
        >
          <p
            class="leading-normal h-6 truncate"
          >
            
          </p>
           
          <svg
            class="h-8 text-main float-right fill-current mr--3 mt--68/10"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
             
            <path
              d="M0-.75h24v24H0z"
              fill="none"
            />
          </svg>
        </div>
         
        <div
          class="dropdown absolute text-body z-40 bg-white text-center w-full border border-main select-none border-t-0 mb-2"
          name="open"
          style="display: none;"
        />
      </div>
       
      <div
        class="dropdown-input relative top--4"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3"
        >
          Course:
        </label>
         
        <div
          class="visible w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 outline-none"
        >
          <p
            class="leading-normal h-6 truncate"
          >
            
          </p>
           
          <svg
            class="h-8 text-main float-right fill-current mr--3 mt--68/10"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
             
            <path
              d="M0-.75h24v24H0z"
              fill="none"
            />
          </svg>
        </div>
         
        <div
          class="dropdown absolute text-body z-40 bg-white text-center w-full border border-main select-none border-t-0 mb-2"
          name="open"
          style="display: none;"
        />
      </div>
       
      <!---->
       
      <button
        class="button-lg"
      >
        Update Competitor
      </button>
    </form>
  </div>
   
  <!---->
</div>
`;
